Refactor of some folders and css. Redesign of navbar. The new structure is more consistent and flexible. Ruben Gomez Dopazo

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "motion": "^11.14.4",
-    "next": "15.1.0",
+    "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
     "react-markdown": "^9.0.1"
