--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
