--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "motion": "^11.14.4",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
