--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
+    "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.1",
     "uuid": "^11.1.0"
   },
